fix some alignment issue

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -58,7 +58,7 @@
         display: flex;
         align-items: center;
         position: absolute;
-        top: 10%;
+        top: 15%;
         right: 1rem;
         transform: translateY(-50%);
         
